[Test/api] 관리자 유저 관리 테스트 관리자 인증 방식으로 수정
- ClerkPrincipal 기반 임시 인증을 dev에 병합된 AdminPrincipal + ROLE_ADMIN 방식으로 교체
- /admin/v1/member/** 가 이제 adminSecurityFilterChain에서 ROLE_ADMIN을 요구하므로, 목록/상세 조회 테스트에도 인증 추가

IssueNum #303